--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>Swifty</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Swift</name>
+  <url>http://maven.apache.org</url>
   
   <dependencies>
     	<dependency>
@@ -11,6 +12,16 @@
 			<artifactId>scalafx_2.11</artifactId>
 			<version>8.0.60-R9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-core</artifactId>
+			<version>5.4.2</version>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>4.2.2.RELEASE</version>
+        </dependency>
    </dependencies>
   
   
@@ -33,6 +44,42 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+       		<groupId>org.apache.activemq.tooling</groupId>
+	        <artifactId>maven-activemq-plugin</artifactId>
+	        <version>5.7.0</version>
+	        <configuration>
+	          <configUri>xbean:file:../conf/activemq.xml</configUri>
+	          <fork>false</fork>
+	          <systemProperties>
+	            <property>
+	              <name>javax.net.ssl.keyStorePassword</name>
+	              <value>password</value>
+	            </property>
+	            <property>
+	              <name>org.apache.activemq.default.directory.prefix</name>
+	              <value>./target/</value>
+	            </property>
+	          </systemProperties>
+	        </configuration>
+	        <dependencies>
+		      <dependency>
+		            <groupId>org.springframework</groupId>
+		        <artifactId>spring</artifactId>
+		        <version>2.5.5</version>
+		      </dependency>
+		      <dependency>
+		            <groupId>org.mortbay.jetty</groupId>
+		            <artifactId>jetty-xbean</artifactId>
+		            <version>6.1.11</version>
+		         </dependency>    
+		         <dependency>
+		           <groupId>org.apache.camel</groupId>
+		           <artifactId>camel-activemq</artifactId>
+		           <version>1.1.0</version>
+		         </dependency>
+		    </dependencies>           
+	      </plugin>
     </plugins>
   </build>
 </project>
